Search Box Added

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav search-righ">
-                        <li class="nav-item" title="Search"><a href="#search" class="btn search-search"><i class="fa fa-search mr-2" aria-hidden="true"></i>Verify Cerificate</a></li>
+                        <li class="nav-item" title="Search"><a href="search/index.html" class="btn search-search"><i class="fa fa-search mr-2" aria-hidden="true"></i>Verify Cerificate</a></li>
                     </ul>
                     <!-- search popup -->
                     <div id="search" class="pop-overlay">
